[package]
name = "activity-box-rs"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"
strip = true
lto = true
debug = false
debug-assertions = false
codegen-units = 1
panic = "abort"
overflow-checks = false

[dependencies]
dotenvy = "0.15.7"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
ureq = { version = "3.0.11", features = ["json", "brotli"] }
